syntax = "proto3";

package rudolfoborges.rbpay.messages;

option java_package = "rudolfoborges.rbpay.messages";
option java_outer_classname = "StockProtocolBuffer";

message StockAdjustmentMessage {

    string product = 1;
    double amount = 2;

}

message AvailableAmountMessage {

    double amount = 1;

}